--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Enspire",
-  "version": "1.0.0",
+  "version": "latest",
   "description": "Inspiring quotes 😇 which I came across, showcased with ♥️",
   "main": "index.js",
   "repository": "https://github.com/VedxP/enspire",
@@ -8,8 +8,8 @@
   "license": "GPL v3.0",
   "private": true,
   "devDependencies": {
-    "vitepress": "1.0.0-alpha.17",
-    "vue": "3.2.40"
+    "vitepress": "latest",
+    "vue": "latest"
   },
    "scripts": {
     "docs:build": "vitepress build docs",
